<resources>
    <string name="app_name">Ejercicio1DI</string>
    <string name="phonetic_name">Phonetic Name</string>
    <string name="nickname">Nickname</string>
    <string name="name">Name</string>
    <string name="Phone">Phone</string>
    <string name="CHANGE">Change</string>
    <string name="Email">E-mail</string>
    <string name="action_settings">Accion</string>
    <string name="action_buscar">buscar</string>
    <string name="action_add">AccionAñadir</string>
    <string name="ElegirOpcion">Elige una opción:</string>
    <string name="AngryBirds">Angry Birds</string>
    <string name="DragonFly">Dragon Fly</string>
    <string name="HillClimbing">Hill Climbing racing</string>
    <string name="PocketSoccer">Pocket Soccer</string>
    <string name="RadiantDefense">Radiant Defense</string>
    <string name="ninjump">Ninja Jump</string>
    <string name="aircontrol">Air control</string>

    <string-array name="telefonos">
        <item>Telefono1</item>
        <item>Telefono2</item>
        <item>Telefono3</item>
        <item>Telefono4</item>
        <item>Telefono5</item>
        <item>Telefono6</item>
        <item>Telefono7</item>
        <item>Telefono8</item>

    </string-array>
</resources>