<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:contentDescription="@android:string/copyUrl"
    android:scrollbarTrackVertical="@drawable/ic_launcher_foreground">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scrollbarTrackVertical="@android:drawable/ic_menu_compass"
                android:src="@android:drawable/ic_menu_myplaces"
                android:layout_margin="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextText4"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/editTextText5"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/phonetic_name" />

                <EditText
                    android:id="@+id/editTextText6"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/nickname" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="211dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <Button
                android:id="@+id/button5"
                android:layout_width="98dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="60dp"
                android:text="@string/CHANGE" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                app:srcCompat="@android:drawable/ic_menu_call" />

            <EditText
                android:id="@+id/editTextText7"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/Phone" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                app:srcCompat="@android:drawable/sym_action_email" />

            <EditText
                android:id="@+id/editTextText8"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/Email" />
        </TableRow>
    </TableLayout>
</ScrollView>